feat: manage shared configuration packs in dashboard (#63)
